--- a/index.html
+++ b/index.html
@@ -252,5 +252,6 @@
 <footer class="footer">
     <div class="footer__content">Все права защищены.</div>
 </footer>
+<!--<script src="./src/scripts/script.js"></script>-->
 </body>
 </html>
