--- a/index.html
+++ b/index.html
@@ -48,12 +48,22 @@
             <path d="M492 663L526 787" stroke="#202027" stroke-linecap="round"/>
         </svg>
     </div>
+    <div class="star-14">
+        <svg width="160" height="155" viewBox="0 0 160 155" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M164.226 10.1084C167.072 10.8901 246.284 43.9262 246.284 43.9262L162.242 52.8254L215.335 120.072L140.485 74.1373L132.858 151.995L111.761 70.0034L41.4419 109.004L89.8822 51.7587L3.91711 47.8942L84.7193 23.992L24.6779 -44.2245L109.09 -5.05042L128.408 -80.6362L137.083 -4.88821L213.973 -57.1361L164.226 10.1084Z"
+                  fill="#BCEC30" stroke="#202027" stroke-miterlimit="10" stroke-linecap="round"/>
+        </svg>
+    </div>
     <div class="container">
-        <h1>Добро пожаловать на мой сайт мини-игр</h1>
-        <p class="container__text">Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай <span> <a href="#guess-number"  >«Поехали!»</a></span>
-            и <span>приступай.</span>
-        </p>
-        <a href="#guess-number" class="btn">Поехали!</a>
+        <div class="container-content">
+            <h1>Добро пожаловать на мой сайт мини-игр</h1>
+            <p class="container-content__text">Тебе предстоит пройти несколько увлекательных игр. Если готов, нажимай
+                <span> <a
+                        href="#guess-number">«Поехали!»</a></span>
+                и <span>приступай.</span>
+            </p>
+            <a href="#guess-number" class="btn">Поехали!</a>
+        </div>
     </div>
 
 </section>
@@ -196,7 +206,7 @@
     <div class="container">
         <h2>Мини-игры</h2>
         <div id="guess-number" class="games">
-            <article class="game" >
+            <article class="game">
                 <div class="game-box">
                     <h3 class="game-box__title">Угадай число</h3>
                     <p class="game-box__text">Попробуй угадать случайное число от 1 до 100.</p>
@@ -252,6 +262,6 @@
 <footer class="footer">
     <div class="footer__content">Все права защищены.</div>
 </footer>
-<!--<script src="./src/scripts/script.js"></script>-->
+<!--<script src="./src/scripts/hw-2.js"></script>-->
 </body>
 </html>
