--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
 <footer class="footer">
     <div class="footer__content">Все права защищены.</div>
 </footer>
-<script src="./src/scripts/hw-2.js"></script>
+<!--<script src="./src/scripts/hw-2.js"></script>-->
+<script src="./src/scripts/hw-3.js"></script>
 </body>
 </html>
