--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
     <div class="footer__content">Все права защищены.</div>
 </footer>
 <!--<script src="./src/scripts/hw-2.js"></script>-->
-<script src="./src/scripts/hw-3.js"></script>
+<!--<script src="./src/scripts/hw-3.js"></script>-->
+<script src="./src/scripts/hw-4.js"></script>
 </body>
 </html>
