--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="game-box">
                     <h3 class="game-box__title">Угадай число</h3>
                     <p class="game-box__text">Попробуй угадать случайное число от 1 до 100.</p>
-                    <button class="btn">Играть!</button>
+                    <button onclick="firstGame()" class="btn">Играть!</button>
                 </div>
                 <img class="game__img" src="images/cover1.jpg" alt="Игра 1">
             </article>
@@ -275,6 +275,7 @@
 </footer>
 <!--<script src="./src/scripts/hw-2.js"></script>-->
 <!--<script src="./src/scripts/hw-3.js"></script>-->
-<script src="./src/scripts/hw-4.js"></script>
+<!--<script src="./src/scripts/hw-4.js"></script>-->
+<script src="./src/scripts/hw-5.js"></script>
 </body>
 </html>
