--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
 <!--<script src="./src/scripts/hw-2.js"></script>-->
 <!--<script src="./src/scripts/hw-3.js"></script>-->
 <!--<script src="./src/scripts/hw-4.js"></script>-->
-<script src="./src/scripts/hw-5.js"></script>
+<!--<script src="./src/scripts/hw-5.js"></script>-->
+<script src="./src/scripts/hw-6.js"></script>
 </body>
 </html>
