--- a/index.html
+++ b/index.html
@@ -68,52 +68,54 @@
 
 </section>
 
-<div class="scroll-bar">
-    <a class="scroll-bar__link" href="#">Викторина</a>
-    <div class="scroll-bar__svg">
-        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
-                  fill="#202027"/>
-        </svg>
-    </div>
-    <a class="scroll-bar__link" href="#">угадай число</a>
-    <div class="scroll-bar__svg">
-        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
-                  fill="#202027"/>
-        </svg>
-    </div>
-    <a class="scroll-bar__link" href="#">Переверни текст</a>
-    <div class="scroll-bar__svg">
-        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
-                  fill="#202027"/>
-        </svg>
-    </div>
-    <a class="scroll-bar__link" href="#">Простая арифметика</a>
-    <div class="scroll-bar__svg">
-        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
-                  fill="#202027"/>
-        </svg>
-    </div>
+<div class="animation">
+    <div class="scroll-bar">
+        <a class="scroll-bar__link" href="#">Викторина</a>
+        <div class="scroll-bar__svg">
+            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+                      fill="#202027"/>
+            </svg>
+        </div>
+        <a class="scroll-bar__link" href="#">угадай число</a>
+        <div class="scroll-bar__svg">
+            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+                      fill="#202027"/>
+            </svg>
+        </div>
+        <a class="scroll-bar__link" href="#">Переверни текст</a>
+        <div class="scroll-bar__svg">
+            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+                      fill="#202027"/>
+            </svg>
+        </div>
+        <a class="scroll-bar__link" href="#">Простая арифметика</a>
+        <div class="scroll-bar__svg">
+            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+                      fill="#202027"/>
+            </svg>
+        </div>
+        <a class="scroll-bar__link" href="#">Камень, ножницы, бумага</a>
+        <div class="scroll-bar__svg">
+            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+                      fill="#202027"/>
+            </svg>
+        </div>
+        <a class="scroll-bar__link" href="#">Генератор случайных цветов</a>
+        <div class="scroll-bar__svg">
+            <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
+                      fill="#202027"/>
+            </svg>
+        </div>
 
-    <a class="scroll-bar__link" href="#">Камень, ножницы, бумага</a>
-    <div class="scroll-bar__svg">
-        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
-                  fill="#202027"/>
-        </svg>
     </div>
-    <a class="scroll-bar__link" href="#">Генератор случайных цветов</a>
-    <div class="scroll-bar__svg">
-        <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path d="M18 0L22.8616 13.1384L36 18L22.8616 22.8616L18 36L13.1384 22.8616L0 18L13.1384 13.1384L18 0Z"
-                  fill="#202027"/>
-        </svg>
-    </div>
-
 </div>
+
 
 <section class="main">
     <div class="star-7">
@@ -230,7 +232,7 @@
                 <div class="game-box">
                     <h3 class="game-box__title">Простая арифметика</h3>
                     <p class="game-box__text">Попробуй решить простые арифметические задачи.</p>
-                    <button class="btn">Играть!</button>
+                    <button onclick="secondGame()" class="btn">Играть!</button>
                 </div>
             </article>
             <article id="flipText" class="game">
@@ -273,6 +275,7 @@
 <footer class="footer">
     <div class="footer__content">Все права защищены.</div>
 </footer>
+<script src="./src/scripts/mini-games.js"></script>
 <!--<script src="./src/scripts/hw-2.js"></script>-->
 <!--<script src="./src/scripts/hw-3.js"></script>-->
 <!--<script src="./src/scripts/hw-4.js"></script>-->
