--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
 <!--<script src="./src/scripts/hw-4.js"></script>-->
 <!--<script src="./src/scripts/hw-5.js"></script>-->
 <!--<script src="./src/scripts/hw-6.js"></script>-->
-<script src="./src/scripts/hw-7.js"></script>
+<!--<script src="./src/scripts/hw-7.js"></script>-->
+<script src="./src/scripts/hw-8.js"></script>
 </body>
 </html>
