--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 <div class="game-box">
                     <h3 class="game-box__title">Камень, ножницы, бумага</h3>
                     <p class="game-box__text">Сыграй в популярную игру против компьютера.</p>
-                    <button onclick="fifthGame()" class="btn">Играть!</button>
+                    <button onclick="fiveGame()" class="btn">Играть!</button>
                 </div>
                 <img class="game__img" src="images/cover5.jpg" alt="Игра 5">
             </article>
