--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Мини игры</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -266,7 +266,7 @@
                     <h3 class="game-box__title">Генератор случайных цветов</h3>
                     <p class="game-box__text">Игра, в которой при клике на кнопку фон страницы меняется на
                         случайный.</p>
-                    <button onclick="sixthGame()" class="btn">Играть!</button>
+                    <button class="btn">Играть!</button>
                 </div>
             </article>
         </div>
