--- a/dom.html
+++ b/dom.html
@@ -3,8 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <title>Последняя домашка js</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="src/scss/domstyle.css">
 </head>
 <body>
+
+<section class="main">Задание 1. Скрытие и показ текста
+    <h1 class="title">Скрытие и показ текста</h1>
+    <button class="btn" id="hide-show">скрыть</button>
+</section>
+
+<section class="main">Задание 2. Изменение стиля элемента
+    <p class="text">
+        lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        sed do eiusmod tempor
+    </p>
+    <button class="btn" id="change-color">Изменить цвет</button>
+</section>
+
+<section class="main">Задание 3. Динамическое изменение текста
+    <button class="btn" id="change-text">Изменить текст</button>
+</section>
+
+<section class="main">Задание 4. Поиск и изменение элементов по классу
+    <p class="main__description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+    <p class="description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+    <p class="main__description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+    <p class="description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+    <p class="main__description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+    <p class="description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+    <p class="main__description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+    <p class="description">lorem ipsum dolor sit amet, consectetur adipiscing elit,
+    </p>
+</section>
+
+
+<section class="main">Задание 6. Добавление нового элемента в DOM
+    <button class="btn" id="newItem">Добавить элемент</button>
+</section>
+
+<section class="main">Задание 7. Удаление элемента
+    <button class="btn" id="remove-tem">Удалить элемент</button>
+</section>
+
+<script src="./src/scripts/hw-9.js"></script>
 
 </body>
 </html>
